Fix outliner element color on iOS

--- a/css/panels.css
+++ b/css/panels.css
@@ -672,6 +672,8 @@
 		padding-left: 5px;
 		pointer-events: none;
 		color: inherit;
+		-webkit-text-fill-color: var(--color-text);
+		opacity: 1; /* required on iOS */
 	}
 	input.cube_name.renaming {
 		pointer-events: auto;
